objects/zqu__QuoteChargeDetail__c.object
<CustomObject>
    <description>This object is used to store the details (including billing metrics) for charges on a quote.</description>
    <fields>
        <fullName>zqu__ChargeNumber__c</fullName>
        <description>A unique number that identifies the charge</description>
        <inlineHelpText>A unique number that identifies the charge</inlineHelpText>
        <label>Charge Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaMRR__c</fullName>
        <description>Delta MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__DeltaTCV__c</fullName>
        <description>Delta TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>Delta TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>Delta TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__MRR__c</fullName>
        <description>MRR value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>MRR value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>MRR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalId__c</fullName>
        <description>The Zuora Id of the original Rate Plan Charge this charge corresponds to.</description>
        <inlineHelpText>The Zuora Id of the original Rate Plan Charge this charge corresponds to.</inlineHelpText>
        <label>Original Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__OriginalRatePlanId__c</fullName>
        <description>The Zuora Id of the original Rate Plan this charge belongs to</description>
        <inlineHelpText>The Zuora Id of the original Rate Plan this charge belongs to</inlineHelpText>
        <label>Original Rate Plan Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlanCharge__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Rate Plan Charge this charge came from.</description>
        <inlineHelpText>The Product Rate Plan Charge this charge came from.</inlineHelpText>
        <label>Product Rate Plan Charge</label>
        <referenceTo>zqu__ProductRatePlanCharge__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__ProductRatePlan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Product Rate Plan this charge comes from.</description>
        <inlineHelpText>The Product Rate Plan this charge comes from.</inlineHelpText>
        <label>Product Rate Plan</label>
        <referenceTo>zqu__ProductRatePlan__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zqu__Quote__c</fullName>
        <description>The quote object this charge record belongs to.</description>
        <inlineHelpText>The quote object this charge record belongs to.</inlineHelpText>
        <label>Quote</label>
        <referenceTo>zqu__Quote__c</referenceTo>
        <relationshipLabel>Quote Charge Details</relationshipLabel>
        <relationshipName>QuoteChargeDetails</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>zqu__TCV__c</fullName>
        <description>TCV value calculated by previewing the quote from Zuora</description>
        <inlineHelpText>TCV value calculated by previewing the quote from Zuora</inlineHelpText>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Quote Charge Detail</label>
    <nameField>
        <label>Quote Charge Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quote Charge Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>